--- a/public/frontend/assets/css/style.css
+++ b/public/frontend/assets/css/style.css
@@ -212,7 +212,7 @@ p {
     margin-bottom: 0;
     font-size: 16px;
     font-weight: 400;
-    color: var(--body-font-color);
+    color: #333435;
     line-height: 25px;
 }
 
@@ -530,9 +530,7 @@ section {
 .section-left-title-with-btn .section-heading {
     width: 100%;
 }
-.section-title.section-title-left {
-    width: calc(100% - 48%);
-}
+
 .section-heading {
     font-weight: 500;
     font-size: 41px;
@@ -709,8 +707,8 @@ button:focus {
 }
 .theme-button1:hover {
     color: var(--theme-color) !important;
-    background-color: var(--white-color);
-    border: 2px solid var(--white-color);
+    background-image: linear-gradient(to right, #f39122, #bacd33);
+    border: 2px solid #015fa7;
 }
 .theme-button2 {
     background-color: var(--white-color)!important;
@@ -866,7 +864,7 @@ button:focus {
 
 #mainNav {
     position: fixed;
-    height: 100px;
+    height: 90px;
     display: flex !important;
     transition: all ease .6s;
     background: #0091d275;
@@ -956,9 +954,10 @@ button:focus {
     align-items: center;
 }
 #librariesDropdown {
-    background-color: var(--white-color);
+    /* background-color: var(--white-color); */
     border: none;
-    color: var(--heading-color)!important;
+    /* color: var(--heading-color)!important; */
+    color: #fff;
     border-radius: 3px;
     padding: 6.5px 21px!important;
     font-weight: 500;
@@ -1002,7 +1001,7 @@ button:focus {
 .header-nav-left-side:before {
     height: 103px;
     width: 1px;
-    background-color: rgba(255, 255, 255, 0.1);
+    /* background-color: rgba(255, 255, 255, 0.1); */
     content: "";
     left: 0;
     position: absolute;
@@ -1530,16 +1529,25 @@ button:focus {
     z-index: 100;
 }
 .single-feature-item {
-    background-color: var(--white-color);
+    /* background-color: var(--white-color); */
     box-shadow: 0 6px 21px rgba(21, 3, 89, 0.4);
     border-radius: 3px;
     padding: 43px 30px;
+}
+.special-feature-area .col-md-4:nth-child(1) .single-feature-item {
+    background-color: #1b77ba;
+}
+.special-feature-area .col-md-4:nth-child(2) .single-feature-item {
+    background-color: #bacd33;
+}
+.special-feature-area .col-md-4:nth-child(3) .single-feature-item {
+    background-color: #f39223;
 }
 .single-feature-item p {
     font-weight: normal;
     font-size: 16px;
     line-height: 154%;
-    color: var(--gray-color);
+    color: #040453;
 }
 .single-feature-item h6 {
     padding-bottom: 10px;
@@ -1946,7 +1954,6 @@ button:focus {
 }
 .course-instructor-support-wrap div:nth-child(2) .instructor-support-item .theme-btn:hover {
     background-color: var(--white-color);
-    color: var(--orange-color)!important;
 }
 
 /*Client Logo Area CSS*/
@@ -8400,6 +8407,8 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     position: absolute;
     top: 50%;
     transform: translateX(-50%) translateY(-50%);
+    padding: 20px;
+    background-image: linear-gradient(to right, #0672bb29, #bacd33a6);
 }
 .slider__slides > .slider__slide:nth-child(2) .slider__slide-text {
     bottom: 10vh;
@@ -8462,4 +8471,91 @@ input[type="date"]::-webkit-calendar-picker-indicator {
         background-color: #015fa7;
         color: white;
    }
+}
+/* for top category */
+:root {
+	--sinSerif: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+	--Nhexa: 4;
+	--gap: 2vw;
+	--size: calc(calc(100vw / var(--Nhexa)) - var(--gap));
+}
+@media only screen and (min-width: 1100px) {:root {--Nhexa: 6;}}
+@media only screen and (max-width: 600px) {
+	:root {--Nhexa: 2;}
+	.section-categories {margin-right: calc(var(--size) * .3);}
+}
+.section-categories *{
+    position: relative;
+}
+.section-categories {
+  margin: calc(var(--size) * .5) 0 0;
+  width: calc(var(--size) * calc(var(--Nhexa) - 1));
+	display: grid;
+	grid-template-columns: repeat(var(--Nhexa), 1fr);
+	grid-gap: var(--gap);
+    position: relative;
+}
+.section-categories article {
+	background: cadetblue;
+  width: var(--size); 
+  height: calc(var(--size) / 1.1111111);
+	clip-path: url(#hexagono);
+  clip-path: polygon(25% 0, 75% 0, 100% 50%, 75% 100%, 25% 100%, 0 50%);
+  margin-right: calc(var(--size) / 2);
+	color: #fff;
+	overflow: hidden;
+}
+.section-categories article:nth-child(2n) {margin: calc(var(--size) * -.5) calc(var(--size) * -.25) 0 calc(var(--size) * -.75);}
+.section-categories article::before {
+	content: '';
+	float: left;
+	width: 25%;
+	height: 100%;
+	clip-path: polygon(0% 0%, 100% 0%, 0% 50%, 100% 100%, 0% 100%);
+	shape-outside: polygon(0% 0%, 100% 0%, 0% 50%, 100% 100%, 0% 100%);
+}
+.section-categories img {
+  width: var(--size);
+	height: var(--size);
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	transform-origin: 0% 50%;
+	transition: .75s;
+	clip-path: url(#hexagono);
+	clip-path: inherit;
+	z-index:  10;
+}
+.section-categories article:hover img {transform: translate(-50%, -50%) rotate(-110deg);}
+.section-categories h2 {font-size: 100%;}
+.section-categories figure {
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	justify-content: center;
+	max-width: 50%;
+	height: 100%;
+	font-size: calc(9 / var(--Nhexa) * 1vw);
+	line-height: 1;
+	color: #fff;
+	transition: .75s .05s;
+  text-align: center;
+}
+.section-categories figure p {
+	font-size: 70%;
+	line-height: 1.2;
+	width: 100%;
+}
+.section-categories h1 {
+	width: 100vw;
+	background: #FF0066;
+	position: sticky;
+	top: 0;
+	z-index: 1;
+	margin-bottom: calc(var(--size) * .55 + var(--gap));
+	padding: 2vh 0;
+	text-align: center;
+	font-weight: 400;
+	color: #fff;
 }
