--- a/public/frontend/assets/css/responsive.css
+++ b/public/frontend/assets/css/responsive.css
@@ -1129,7 +1129,8 @@
         margin-top: 80px;
     }
     .main-menu-collapse {
-        background-color: var(--heading-color);
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cfilter id='f'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='4' numOctaves='1'/%3E%3C/filter%3E%3Crect width='100' height='100' style='filter:url(%23f)' opacity='.2'/%3E%3C/svg%3E");
+        background-color: #0091d263;
         top: 18px;
         position: relative;
         padding: 30px;
@@ -1137,6 +1138,21 @@
         overflow-y: auto;
         height: calc(100vh - 80px);
     }
+    #navbarSupportedContent::-webkit-scrollbar {
+        display: none;
+      }
+      /* Hide scrollbar for IE, Edge and Firefox */
+      #navbarSupportedContent {
+        -ms-overflow-style: none;  /* IE and Edge */
+        scrollbar-width: none;  /* Firefox */
+      }
+      .dropdown-menu::-webkit-scrollbar {
+        display: none;
+      }
+      .dropdown-menu{
+        -ms-overflow-style: none;  /* IE and Edge */
+        scrollbar-width: none;  /* Firefox */
+      }
     .header-nav-left-side {
         padding-left: 0;
         flex-direction: column-reverse;
