--- a/public/frontend/assets/css/responsive.css
+++ b/public/frontend/assets/css/responsive.css
@@ -1129,8 +1129,7 @@
         margin-top: 80px;
     }
     .main-menu-collapse {
-        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cfilter id='f'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='4' numOctaves='1'/%3E%3C/filter%3E%3Crect width='100' height='100' style='filter:url(%23f)' opacity='.2'/%3E%3C/svg%3E");
-        background-color: #0091d263;
+        background-image: linear-gradient(to right,#0672bb,#82d4f6);
         top: 18px;
         position: relative;
         padding: 30px;
@@ -1145,6 +1144,12 @@
       #navbarSupportedContent {
         -ms-overflow-style: none;  /* IE and Edge */
         scrollbar-width: none;  /* Firefox */
+      }
+      @media only screen and (max-width: 991px){
+        #navbarSupportedContent{
+            position: absolute;
+            top: 80px;
+        }
       }
       .dropdown-menu::-webkit-scrollbar {
         display: none;
@@ -2816,6 +2821,9 @@
   .footer-social,.footer-links{
     display: flex;
     justify-content: center;
+  }
+  .slider__slide-text{
+      width: 80%;
   }
 }
 /*-------------------------------------------
