--- a/public/frontend/assets/css/style.css
+++ b/public/frontend/assets/css/style.css
@@ -6318,14 +6318,12 @@ span.tooltip-show-btn {
     padding: 0;
 }
 .sign-up-left-content {
-    background-image: url("../img/sign-up-page-bg.png");
     background-repeat: no-repeat;
-    background-position: center;
     background-size: cover;
     padding: 30px 100px;
 }
 .sign-up-bottom-img {
-    margin-top: 130px;
+    margin-top: 10px;
 }
 .sign-up-bottom-img img {
     height: auto;
@@ -6343,14 +6341,16 @@ span.tooltip-show-btn {
     width: 479px;
     margin: 0 auto;
 }
-.sign-up-left-content p {
-    font-size: 26px;
-    line-height: 137%;
-    color: rgba(255, 255, 255, 0.86);
-    margin-top: 100px;
-    padding-right: 115px;
+.sign-up-top-logo{
+    text-align: center;
 }
-
+.sign-up-left-content p {
+    font-size: 22px;
+    line-height: 1.3;
+    color: #424344;
+    margin-top: 100px;
+    text-align: center;
+}
 /*Show/Hide Password*/
 .sign-up-right-content .pass-icon {
     font-size: 13px;
