--- a/public/admin/styles/main.css
+++ b/public/admin/styles/main.css
@@ -18864,3 +18864,7 @@ blockquote.right span::before {
   -webkit-transform: rotate(45deg) translate(0, -50%);
   transform: rotate(45deg) translate(0, -50%);
 }
+.notifl{
+  margin-inline-start: .5rem;
+  text-align: start;
+}
