--- a/public/frontend/assets/css/style.css
+++ b/public/frontend/assets/css/style.css
@@ -9094,3 +9094,23 @@ Classes
 .page-banner-content nav{
     position: inherit;!important;
 }
+
+
+.float{
+    position:fixed;
+    width:60px;
+    height:60px;
+    bottom:40px;
+    right:40px;
+    background-color:#bacd33;
+    color:#FFF;
+    border-radius:50px;
+    text-align:center;
+    font-size:30px;
+    box-shadow: 2px 2px 3px #999;
+    z-index:100;
+}
+
+.my-float{
+    margin-top:16px;
+}
